WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191076
[PSON] WebPageProxy::receivedNavigationPolicyDecision() should not schedule the new load asynchronously when process-swapping
https://bugs.webkit.org/show_bug.cgi?id=191076
Summary
[PSON] WebPageProxy::receivedNavigationPolicyDecision() should not schedule t...
Chris Dumez
Reported
2018-10-30 12:39:44 PDT
WebPageProxy::receivedNavigationPolicyDecision() should not schedule the new load asynchronously when process-swapping. The client can request a new load synchronously after answering the policy decision, in which case we'd end up loading the wrong URL.
Attachments
Patch
(13.52 KB, patch)
2018-10-30 12:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-10-30 12:41:06 PDT
Created
attachment 353397
[details]
Patch
Chris Dumez
Comment 2
2018-11-01 09:45:28 PDT
Ping review?
Geoffrey Garen
Comment 3
2018-11-01 13:44:23 PDT
Comment on
attachment 353397
[details]
Patch r=me
Chris Dumez
Comment 4
2018-11-01 13:53:55 PDT
Comment on
attachment 353397
[details]
Patch Clearing flags on attachment: 353397 Committed
r237699
: <
https://trac.webkit.org/changeset/237699
>
Chris Dumez
Comment 5
2018-11-01 13:53:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-11-01 13:54:22 PDT
<
rdar://problem/45740845
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug