[PSON] WebPageProxy::receivedNavigationPolicyDecision() should not schedule the new load asynchronously when process-swapping https://bugs.webkit.org/show_bug.cgi?id=191076

Reviewed by Geoffrey Garen.

Source/WebKit:

WebPageProxy::receivedNavigationPolicyDecision() should not schedule the new load asynchronously when process-swapping.
The client can request a new load synchronously after answering the policy decision, in which case we'd end up loading
the wrong URL.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::receivedNavigationPolicyDecision):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::processForNavigation):
(WebKit::WebProcessPool::processForNavigationInternal):
* UIProcess/WebProcessPool.h:

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
(-[PSONNavigationDelegate init]):
(-[PSONNavigationDelegate webView:decidePolicyForNavigationAction:decisionHandler:]):

Canonical link: https://commits.webkit.org/205973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237699 268f45cc-cd09-0410-ab3c-d52691b4dbfc